# aikit

./: README.md  pyproject.toml  requirements.txt
src/aikit/chat/: __init__.py  chat.py  messages.py  prompt_templates.py  tools.py
src/aikit/client/: hugging_face_client.py
src/aikit/image/: image.py  naming.py
src/apikit/: __init__.py
src/apikit/chat/: __init__.py
src/apikit/client/: __init__.py
